# vakt-ble-defender

./: README.md
AnchoredSetup/bridge/: .gitignore  automate_attacks.py  automate_attacksV2.py  benign_and_attacks.sh  container.sh  requirements.sh  run.sh  test
AnchoredSetup/bridge/captures/: test_galaxy_1.pcapng  test_galaxy_bonding.pcapng
AnchoredSetup/bridge/scripts/: docker_release.docker  docker_release.docker.dockerignore  launch_ble_sniffer.py  packet_hex_to_c_array.py  podman_sudo  python_env.sh  requirements.txt  test_ble_linux.py
AnchoredSetup/bridge/src/: BLEDefender.py  BLEDefenderv2.py  BLEDefenderv3.py  BLEDefenderv4.py  MaquinaEstado.py  example2.py  smp_crtl_ll_map.dot  smp_crtl_ll_map.json  smp_crtl_ll_map_v2.dot  smp_crtl_ll_map_v2.json  uhubctl_cycle.py  wdissector.py  wireshark_generic_dissector_traces.txt
AnchoredSetup/docs/: .~lock.crc_jamming.pptx#  crc_jamming.pptx  external_jammer.drawio  firmware_tests.drawio  radio_rx.drawio  radio_rx_tx.drawio  radio_rx_tx_bcc_jamming.drawio  radio_rx_tx_simple_jamming.drawio  setup_positions.drawio
Attacks/: requirements.sh
Attacks/Fuzzer/: Dockerfile  ble_central.py  ble_config.json  docker.sh  greyhound.py  requirements.sh  requirements.txt  wifi_ap_config.json
Attacks/Fuzzer/drivers/: NRF52_dongle.py  patch_rt2800_driver.patch
Attacks/Fuzzer/greyhound/: machine.py  webserver.py
Attacks/Non-Sweyntooth/BLEDiff/: LICENSE  README.md  addr_config.json  ble_config.json  bypassing_legacy_pairing.py  bypassing_legacy_pairing_passkey.py  bypassing_oob.py  dhcheck_zeroes.py  e6unresponsiveness_timeout_zero.py  find_bdaddress.py  key_size_greater_than_max.py  requirements.sh  runtime  unresponsive_with_pause_enc_resp_plain.py
Attacks/Non-Sweyntooth/CyRC/: assertion_failure_LL_CONNECTION_PARAM.py  assertion_failure_LL_pkts.py  drivers  invalid_channelmap.py  libs  truncated_L2CAP-Kframe.py
Attacks/Non-Sweyntooth/injectable/: .gitignore  attack_hijack_master.sh
Attacks/Sweyntooth/: CC2640R2_public_key_crash.py  CC_connection_req_crash.py  DA14580_exploit_att_crash.pcap  DA14580_exploit_att_crash.py  DA14680_exploit_silent_overflow.py  Microchip_invalid_lcap_fragment.py  Telink_key_size_overflow.pcap  Telink_key_size_overflow.py  Telink_zero_ltk_installation.py  discover.py  esp32_hci_desync.py  fake2.py  invalid_channel_map.py  link_layer_length_overflow.py  llid_deadlock.py  logsbothseupts.txt  logsbothseupts2.txt  logsbothseupts3.txt  non_compliance_dhskip.py  reconnect.sh  sequential_att_deadlock.py  telink_reconnection_dos.py  zephyr_invalid_sequence.py
Attacks/Sweyntooth/BLESMPServer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Attacks/Sweyntooth/drivers/: NRF52_dongle.py
Eval/BothSetupsColisions/: logsBothSeupt3.txt
Eval/gen_plots/: attacker_distance.py  fuzzing_horizontal_stack.py  gen_bridge_latency.py  latency_data_Anchored.txt  latency_data_Portable.txt  means.py
Eval/lightblue/: hcitraceInvalidL2CAPFragmentDebloated.snoop  hcitraceInvalidL2CAPFragmentDebloated.txt  hcitraceInvalidL2CAPFragmentNoDebloat.snoop  hcitraceInvalidL2CAPFragmentNoDebloat.txt  hcitraceKeySizeOverflowDebloated.snoop  hcitraceKeySizeOverflowDebloated.txt  hcitraceKeySizeOverflowNoDebloat.snoop  hcitraceKeySizeOverflowNoDebloat.txt  hcitraceLLIDdeadlockDebloated.snoop  hcitraceLLIDdeadlockDebloated.txt  hcitraceLLIDdeadlockNoDebloat.snoop  hcitraceLLIDdeadlockNoDebloat.txt  hcitraceSeqAttDebloated.snoop  hcitraceSeqAttDebloated.txt  hcitraceSeqAttNoDebloat.snoop  hcitraceSeqAttNoDebloat.txt  hcitraceTruncatedL2CAPDebloated.snoop  hcitraceTruncatedL2CAPDebloated.txt  hcitraceTruncatedL2CAPNoDebloat.snoop  hcitraceTruncatedL2CAPNoDebloat.txt  hcitraceZeroLTKDebloated.snoop  hcitraceZeroLTKDebloated.txt  hcitraceZeroLTKNoDebloat.snoop  hcitraceZeroLTKNoDebloat.txt  logsInvalidL2CAPFragmentDebloated.bluez.txt  logsInvalidL2CAPFragmentNoDebloat.bluez.txt  logsKeySizeOverflowDebloated.bluez.txt  logsKeySizeOverflowNoDebloat.bluez.txt  logsLLIDDeadlockNoDebloat.bluez.txt  logsLLIDDebloated.bluez.txt  logsSeqATTDebloated.bluez.txt  logsSeqATTNoDebloat.bluez.txt  logsTruncatedL2CapDebloated.bluez.txt  logsTruncatedL2CapNoDebloat.bluez.txt  logsZeroLTKDebloated.bluez.txt  logsZeroLTKNoDebloat.bluez.txt
PortableSetup/: CMakeLists.txt  build.sh  firmware.sh  requirements.sh  runtime
PortableSetup/firmware_central/: firmware.py  platformio.ini  runtime
PortableSetup/firmware_central/binaries/: firmware.hex
PortableSetup/firmware_central/nordicsemi/: __main__.py
PortableSetup/firmware_central/nordicsemi/dfu/: dfu.py
PortableSetup/firmware_central/release/nordicsemi/dfu/: dfu_transport.py  dfu_transport_serial.py
PortableSetup/firmware_central/src/: main.cpp  radio.cpp  radio.h
PortableSetup/firmware_peripheral/: platformio.ini
PortableSetup/firmware_peripheral/nordicsemi/: nrfutil
PortableSetup/firmware_peripheral/release/: firmware.py
PortableSetup/firmware_peripheral/release/binaries/: firmware.hex  vaktble_bootloader-0.7.0-32-g7210c39-dirty_s140_6.1.1.hex
PortableSetup/firmware_peripheral/src/: main.cpp  radio.cpp  radio.h  timer.cpp  timer.h
PortableSetup/libs/: fast_vector.hpp
PortableSetup/libs/react-cpp/: CMakeLists.txt
PortableSetup/libs/react-cpp/include/: loop.h
PortableSetup/libs/react-cpp/libev/: CMakeLists.txt  ev.h
PortableSetup/libs/serialport/include/serial/impl/: unix.h
PortableSetup/libs/serialport/src/impl/: unix.cc
PortableSetup/scripts/: banner.ansi  bootloader.jlink  flash_bootloader.sh  gen_patches.sh  install_llvm.sh  python_env.sh  requirements.txt
PortableSetup/src/: Framework.hpp  MiscUtils.hpp  PacketLogger.hpp  nRF52840.hpp  vaktble.cpp  vaktble.hpp
firmware_attacker/: build.sh  firmware.hex  flash.sh  flash_all.sh  flash_app.sh  nrfutil  platformio.ini  reset_to_dfu.py
firmware_attacker/python_examples/: NRF52_dongle.py  example_get_status.py  example_get_version.py  example_send_raw_packet.py  example_set_scan_mode.py
firmware_attacker/src/: main.cpp  radio.cpp
firmware_target/: sdkconfig  sdkconfig.old
firmware_target/main/: main.c
(+100 files in other folders)
